# measurement_switch_matrix

./: .gitignore  .gitmodules  README.md
Arduino_Firmware/: CMakeLists.txt  compile.bat  flash.bat  flash.sh  library.properties  settings.cmake
Arduino_Firmware/Include/: ADG726Pins.h  ArduinoMainController.h  Commands.h  ErrorCodes.h  ErrorHandler.h  Message.h  MultiplexerController.h  MultiplexerDefines.h  SerialInterfaceHandler.h
Arduino_Firmware/Include/ethernet/: EthernetCommandParser.h  EthernetController.h  EthernetDefines.h
Arduino_Firmware/Src/: ArduinoMainController.cpp  ErrorHandler.cpp  FirmwareEntry.cpp  Message.cpp  MultiplexerController.cpp  SerialInterfaceHandler.cpp
Arduino_Firmware/Src/ethernet/: EthernetCommandParser.cpp  EthernetController.cpp
Arduino_Firmware/Toolchain/AVRDude/: compile_linux.sh
Arduino_Firmware/Toolchain/AVRDude/avrdude-6.4/: Makefile.am  Makefile.in  NEWS  ac_cfg.h.in  avr.c  avrdude.1  avrdude.conf.in  avrftdi.c  bitbang.c  buspirate.c  configure  configure.ac  jtag3.c  jtag3_private.h  libavrdude.h  main.c  ser_win32.c  stk500v2.c  term.c  update.c  usbasp.c  usbdevs.h  xbee.c  xbee.h
Arduino_Firmware/Toolchain/AVRDude/avrdude-6.4/doc/: Makefile.in  avrdude.texi
Arduino_Firmware/Toolchain/AVRDude/avrdude-6.4/windows/: Makefile.in
Arduino_Firmware/cmake/: ArduinoToolchain.cmake  ArduinoToolchain_Win.cmake  build_documentation.cmake
Arduino_Firmware/cmake/Platform/: Arduino.cmake
Arduino_Firmware/doc/: Doxyfile.in
Arduino_Firmware/ethernet_tester/: ethernet_tester.py
python_tester/: switch_matrix_tester.py
(+1 files in other folders)
